Reimplemented the SSH communication to be less dependent on operating system
- SSHLauncher is stateless and NOT injectable; collects information about
  the target system.
- new SSHSession - wraps the jsch session
- SFTPClient - responsible for file system changes
- chmod is not supported on windows
- all stateful objects are closeable -> no need to keep them in SSHUtil

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>